<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorAlternativePowder"
    tools:context=".activities.Registrazione">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <!-- ScrollView all'interno della CardView -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_reg"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_name"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/ic_person"
                android:padding="12dp"
                android:background="@drawable/border_white"
                android:hint="@string/name_reg"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_cognome"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_person"
                android:padding="12dp"
                android:hint="@string/surname_reg"
                android:background="@drawable/border_white"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/signup_sesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_sesso_maschio"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/reg_male"
                    app:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/signup_sesso_femmina"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/reg_female"
                    app:buttonTint="@color/colorPrimary"
                    android:padding="8dp"
                    android:textColor="@color/black" />
            </RadioGroup>

            <!-- Aggiungi la data di nascita -->
            <EditText
                android:id="@+id/signup_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:hint="@string/reg_birth"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:background="@drawable/border_white"
                android:focusable="false"
                android:clickable="true"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:hint="@string/email_reg"
                android:drawableLeft="@drawable/ic_email"
                android:background="@drawable/border_white"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_username"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/user_reg"
                android:background="@drawable/border_white"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:hint="@string/psw_reg"
                android:inputType="textPassword"
                android:background="@drawable/border_white"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_paziente"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/paz_reg"
                    app:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/signup_dottore"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/doc_reg"
                    android:padding="8dp"
                    android:textColor="@color/black" />
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save_reg"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                app:cornerRadius="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/log_reg"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>
    </LinearLayout>
