<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_rect"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gespat_tit"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonInserisciTerapia"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/gespat_terap"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAlternativeMoon"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonInserisciAllergie"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/gespat_all"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAlternativeMoon"
            android:layout_marginBottom="8dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonInserisciVaccinazione"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAlternativeMoon"
            android:gravity="center"
            android:text="@string/gespat_vac"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>




