<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAlternativePowder"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/toolbar"
        android:id="@+id/top_toolbar_ins_terapia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_id_paziente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_data"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_alignStart="@+id/et_id_paziente"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/top_toolbar_ins_terapia"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_id_paziente"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pat_ID"
        android:background="@drawable/border_white"
        android:drawableLeft="@drawable/ic_person"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:padding="12dp"
        android:layout_below="@id/tv_id_paziente"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_messaggio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_message"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:layout_below="@id/et_id_paziente"
        android:layout_alignStart="@+id/et_messaggio"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_messaggio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_writemsg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textMultiLine"
        android:background="@drawable/border_white"
        android:minLines="8"
        android:padding="12dp"
        android:textSize="18dp"
        android:layout_below="@id/tv_messaggio"
        android:gravity="start|top"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_invia_messaggio"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/msg_send"
        app:cornerRadius="20dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorSecondaryDark"
        android:layout_marginTop="80dp"
        android:layout_below="@id/et_messaggio" />

    <include
        layout="@layout/bottom_toolbar_paziente"
        android:id="@+id/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</RelativeLayout>
